cluster/apps/home/homebridge/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
  namespace: home
  labels:
    app: homebridge
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      containers:
        - name: homebridge
          image: docker.io/homebridge/homebridge:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8581
              name: http
              protocol: TCP
            - containerPort: 51644
              name: bridge
              protocol: UDP
              hostPort: 51644
            - containerPort: 51645
              name: bridge-swtchbot
              protocol: UDP
              hostPort: 51645
            - containerPort: 51646
              name: bridge-levoit
              protocol: UDP
              hostPort: 51646
          readinessProbe:
            httpGet:
              path: /
              port: 8581
            failureThreshold: 3
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8581
            failureThreshold: 3
            timeoutSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 8581
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
              gpu.intel.com/i915: 1
            limits:
              cpu: 4000m
              memory: 4Gi
              gpu.intel.com/i915: 1
          volumeMounts:
            - name: config
              mountPath: /homebridge
            - name: gpu
              mountPath: /dev/dri
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homebridge-config
        - name: gpu
          hostPath:
            path: /dev/dri
