cluster/apps/home/homebridge/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: home
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.3.61
spec:
  selector:
    app: homebridge
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8581
    - name: bridge
      port: 51644
      protocol: UDP
      targetPort: 51644
