cluster/apps/home/homebridge/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homebridge-http
  namespace: home
spec:
  hostnames:
    - homebridge.btkostner.network
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: homebridge
          port: 80
